<resources>
    <string name="app_name">Weather</string>
    <string name="home">Home</string>
    <string name="about_us">About us</string>
    <string name="setting">Setting</string>
    <string name="location">Location</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="name">NAME</string>
    <string name="temperature">TEMPERATURE</string>
    <string name="description">DESCRIPTION</string>
    <string name="time">TIME</string>
    <string name="temp">TEMP</string>
    <string name="weather_icon">weather_icon</string>
    <string name="temp_on_day">TEMP_ON_DAY</string>
    <string name="imageofcitiesweatherincitiesrecycler">imageOfCitiesWeatherInCitiesRecycler</string>
    <string name="action_main">Main</string>
    <string name="iconWeather">ICON</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Weather</string>
    <string name="nav_header_subtitle">ser2603@yandex.ru</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="communicate">Communicate</string>
    <string name="about_as_content">The author of this application Sergey Smirnov. The application is developed as part of training on GeekBrains.</string>
    <string name="send_feedback">Send feedback</string>
    <string name="share">Share</string>
    <string name="currentDate">DATE</string>
    <string name="update_time">UPDATE_TIME</string>
    <string name="updated">updated:</string>
    <string name="sensors" translatable="false">SENSORS:</string>
    <string name="has_been_updated">Weather data has been updated</string>
    <string name="temperature_sensor">TEMPERATURE_SENSOR: NO DATA</string>
    <string name="humidity_sensor">HUMIDITY_SENSOR: NO DATA</string>
    <string name="application">Application</string>

    <string name="weather_sunny" translatable="false"></string>
    <string name="weather_clear_night" translatable="false"></string>
    <string name="weather_foggy" translatable="false"></string>
    <string name="weather_cloudy" translatable="false"></string>
    <string name="weather_rainy" translatable="false"></string>
    <string name="weather_snowy" translatable="false"></string>
    <string name="weather_thunder" translatable="false"></string>
    <string name="weather_drizzle" translatable="false"></string>
    <string name="iconInLocationItem" translatable="false">iconInLocationItem</string>
    <string name="iconinlocationitem">iconInLocationItem</string>
    <string name="icon_of_weather">iconWeather</string>
    <string name="iconhourweather">iconHourWeather</string>
    <string name="iconHumidity">iconHumidity</string>
    <string name="iconPressure">iconPressure</string>
    <string name="iconWind">iconWind</string>
    <string name="wind">WIND</string>
    <string name="pressure">PRESSURE</string>
    <string name="humidity">HUMIDITY</string>
    <string name="metersPerSecond">m/s</string>
    <string name="mmHgPost">mm Hg</string>

    <string name="new_city">Add new city</string>
    <string name="name_of_the_city">name of the city</string>
    <string name="ok">OK</string>
    <string name="could_not_get_coordinates">Could not get coordinates</string>
    <string name="icon_in_week_weather_item">icon in week weather item</string>
    <string name="delete_city">Delete a city?</string>
    <string name="city_removed">The city has been removed</string>
</resources>
