<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/timeOfHour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/time" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <ImageView
        android:id="@+id/iconHourWeather"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/iconhourweather"
        android:gravity="center"
        android:text="@string/iconWeather"
        app:srcCompat="@drawable/cloud" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <TextView
        android:id="@+id/tempOfHour"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/temp" />


</LinearLayout>